--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,8 +206,8 @@ nav {
 }
 
 .card-mini-m {
-  margin-top: 1rem;
-  width: 90%;
+  margin-left: ;
+  width: 800px%;
   height: 600px;
   background-color: rgb(187, 187, 187);
 }
